# physics-calc

./: .gitattributes  .gitignore  CLAUDE.md  INSTALL_WINDOWS.txt  Install.bat  LICENSE  README.md  Run.bat  pyproject.toml
.claude/agents/: dev-manager.md
.github/workflows/: ci.yml  release.yml
docs/: content-authoring.md  design-tokens.md  updating.md
docs/adr/: 0001-ui-framework.md  0002-knowledgebase-db.md  0003-curriculum-filter-visibility.md
docs/design/: 0122-grade-course-filter.md
docs/sdlc/: README.md
docs/sdlc/102-epic-curriculum-filter/: 04-implementation.md  05-tests.md  06-review.md
docs/sdlc/173-problems-tab-filter/: 00-brief.md  02-plan.md  04-implementation.md  05-tests.md  07-docs.md
docs/sdlc/175-settings-multiselect/: 00-brief.md  02-plan.md
docs/sdlc/_template/: 00-brief.md  01-requirements.md  02-plan.md  03-design.md  04-implementation.md  05-tests.md  07-docs.md  08-release.md  R1-research.md  R2-study-plan.md  R4-content-review.md
packaging/: smoke_test.py  study-calc.spec
packaging/flatpak/: README.md  build_flatpak.sh  generate-deps.sh  io.github.danilchernyshev.StudyCalc.desktop  io.github.danilchernyshev.StudyCalc.metainfo.xml  io.github.danilchernyshev.StudyCalc.yml
packaging/hooks/: __init__.py  runtime_gi_typelib_path.py
packaging/linux/: AppRun  README.md  build_appimage.sh  build_deb.sh  generate_icon_sizes.py  study-calc.desktop
packaging/linux/deb/: copyright  lintian-overrides  postinst  postrm
packaging/macos/: README.md  build_dmg.sh
packaging/windows/: README.md  build_installer.ps1  make_ico.ps1  study-calc.iss
physics_calc/: __init__.py  __main__.py  i18n.py
physics_calc/core/: __init__.py  cas.py  explain.py  formula.py  learning.py  units.py
physics_calc/domains/: __init__.py  electromagnetism.py  mechanics.py  references.py  thermodynamics.py  waves.py
physics_calc/gui/: __init__.py  app.py
physics_calc/learning/: README.md
physics_calc/learning/en/glossary/: angle_incidence.json  angle_refraction.json  coefficient.json  coulomb_constant.json  cross_section.json  current.json  derivative.json  energy.json  expression.json  factor.json  force.json  frequency.json  function.json  gas_constant.json  heat.json  initial_length.json  length.json  momentum.json  period.json  photon_energy.json  polynomial.json  potential_energy.json  pressure.json  refractive_index.json  resistance.json  root.json  specific_heat.json  temperature.json  term.json  time.json  variable.json  wave_speed.json  wavelength.json
physics_calc/learning/en/topics/: capacitor_charge.json  cas_analyze.json  cas_factor.json  cas_series.json  cas_simplify.json  cas_solve.json  coulomb.json  electric_power.json  momentum.json  newton_2.json  ohm.json  power.json  resistance_series.json  snell.json  velocity.json  work.json
physics_calc/locales/: en.json  es.json  fr.json  ru.json  uk.json
scripts/: seed_db.py
study_calc/: __init__.py  __main__.py  i18n.py  navigation.py  resources.py
study_calc/core/: __init__.py  cas.py  db.py  explain.py  formula.py  installer.py  learning.py  periodic.py  settings.py  units.py  updates.py  vectors.py
study_calc/data/: README.md  elements.json  knowledgebase.db  schema.sql
study_calc/domains/: __init__.py  chemistry.py  electromagnetism.py  mechanics.py  references.py  thermodynamics.py  waves.py
study_calc/gui/: __init__.py  app.py
study_calc/learning/: README.md
study_calc/learning/en/glossary/: acceleration.json  acid_dissociation.json  amount_of_substance.json  antiderivative.json  asymptote.json  binomial_distribution.json  capacitance.json  cell_potential.json  charge.json  combination.json  composition.json  mass.json  (+54 more)
study_calc/locales/: en.json  es.json  fr.json  ru.json  uk.json
study_calc/web/: __init__.py  __main__.py  app.py  bridge.py  screens.py  tokens.json  tokens.py
study_calc/web/frontend/: README.md  components.css  components.js  dom.js  gallery.html  index.html  screens.css  screens.js  shell.css  shell.js  tokens.css
tests/: conftest.py  test_cas.py  test_db_in_sync.py  test_db_seed.py  test_formulas.py  test_i18n.py  test_installer.py  test_learning.py  test_navigation.py  test_packaging_metadata.py  test_periodic.py  test_problems.py  test_references.py  test_resources.py  test_settings.py  test_tokens.py  test_units.py  test_updates.py  test_vectors.py  test_verified_problems.py  test_web_components.py  test_web_screens.py  test_web_shell.py  test_web_updates.py
(+112 files in other folders)
