[project]
name = "study-calc"
version = "0.6.0"
description = "Study calculator: physics (mechanics, thermodynamics, electromagnetism, waves), chemistry (periodic table, molar mass, equation balancing, solution & acid-base formulas), a unit converter, a SymPy-backed symbolic math (CAS) tab with MHF4U Advanced Functions tools, an MCV4U vectors tab, and built-in learning materials, in a PyWebView desktop app (English/Spanish/French/Russian/Ukrainian)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mark Chernyshev" }, { name = "Danil Chernyshev", email = "danil.chernyshev@gmail.com" }]
keywords = ["learning", "education", "physics", "math", "calculator", "units", "pywebview", "cas", "sympy"]
# pywebview is the one and only UI now, so it is a core runtime dependency.
dependencies = ["sympy>=1.12", "pywebview>=5.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# matplotlib backed the retired Tk graphing path; nothing imports it today. Kept
# as a reserved optional extra for the not-yet-built web graphing surface.
graph = ["matplotlib>=3.7"]
# Deprecated no-op alias: pywebview moved into core dependencies above. Retained
# so the documented `--extra web` invocation keeps resolving.
web = []

[project.scripts]
study-calc = "study_calc.web.app:run"
study-calc-web = "study_calc.web.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["study_calc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
